<resources>
    <string name="app_name">LinearLayoutTaskApp</string>
    <string name="name" translatable="false">Asia sama</string>
    <string name="_3_hr">3 hr</string>
    <string name="android_developer" translatable="false">Android developer</string>
    <string name="iraq" translatable="false">Iraq</string>
    <string name="_5_days_ago" translatable="false">5 Days ago</string>
    <string name="uk">UK</string>
    <string name="_150_reviews" translatable="false">(150 Reviews)</string>
    <string name="_4_5">4.5</string>
</resources>