<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/space_16"
    android:paddingEnd="@dimen/space_8"
    android:paddingStart="@dimen/space_12"
    android:paddingVertical="@dimen/space_12"
    android:background="@drawable/card_background"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginEnd="@dimen/space_12"
        app:cardCornerRadius="@dimen/cornar_8dp"
        app:cardElevation="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/me" />


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/name"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/badge_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/space_8"
                    android:layout_marginVertical="@dimen/space_4"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/_3_hr"
                    android:textColor="@color/white"
                    android:textSize="@dimen/body_text_size" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/android_developer"
                android:textAlignment="viewStart"
                android:textColor="@color/blue_87"
                android:textSize="@dimen/body_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/iraq"
                android:textAlignment="viewEnd"
                android:textColor="@color/blue_87"
                android:textSize="@dimen/body_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="14dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/space_4"
                    android:background="@drawable/baseline_location_on_24"
                    android:backgroundTint="@color/red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uk"
                    android:textColor="@color/dark_blue_60"
                    android:textSize="@dimen/body_text_size" />

            </LinearLayout>


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:text="@string/_5_days_ago"
                android:textColor="@color/blue_38"
                android:textSize="@dimen/body_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_8"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/_150_reviews"
                android:textColor="@color/black"
                android:textSize="@dimen/body_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/_4_5"
                android:textColor="@color/black"
                android:textSize="@dimen/body_text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/space_4"
                android:background="@drawable/baseline_star_24"
                android:backgroundTint="@color/yallow" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
